# Multimedia-Database-Managment-System

./: .gitignore  CSDLDPT.docx  README.md  STRUCTURE_REPORT.MD  docker-compose.yml  pyproject.toml  test_end_to_end.py  test_inference.py  ~$SDLDPT.docx
assert/: EXPLAINATION_FEATURE.md  TOPIC.md
report/: Chapter1_Context_and_Positioning.md  Chapter2_System_Architecture.md  Chapter3_Requirements_and_Design.md  Chapter4_Technology_Implementation.md  Chapter5_Infrastructure_DevOps.md  Chapter6_Results_Evaluation.md  Chapter7_Conclusion_Future.md  outline.MD
source/: api.py  app.py  feature_extraction.py  indexing.py  retriever.py
source/process_data/: database.py  extract_audio_from_parquet.py  feature_extraction.py  split_data.py
